# Bos

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
display_server/: Cargo.toml
display_server/src/: main.rs
docs/: architecture.md  book.toml  display_server.md  fs_server.md  plans.txt
docs/src/: SUMMARY.md  architecture.md  booting.md  drivers.md  interrupts.md  introduction.md  memory_management.md  roadmap.md  system_calls.md  task_management.md  timekeeping.md  userland.md
docs/src/memory/: global_allocator.md  guarded_stack.md  page_tables.md
docs/src/tasks/: schedulers.md
init_task/: Cargo.toml
init_task/src/: main.rs
kernel/: Cargo.toml  build.rs  linker-x86_64.ld
kernel/core/: Cargo.toml  build.rs
kernel/core/src/: acpi.rs  apic.rs  consts.rs  exceptions.rs  gdt.rs  ioapic.rs  lib.rs  limine_requests.rs  logger.rs  main.rs  raw_syscall_handler.rs  service_registry.rs  shared_buf.rs  user_task_from_elf.rs
kernel/core/src/drivers/: disk.rs  keyboard.rs  mod.rs  mouse.rs  pci.rs
kernel/core/src/graphics/: display.rs  mod.rs  pat.rs  rgb_pixel.rs
kernel/core/src/interrupt/: handlers.rs  idt.rs  mod.rs  nmi_handler_state.rs
kernel/core/src/ipc/: mod.rs
kernel/core/src/memory/: cpu_local_data.rs  demand.rs  global_allocator.rs  guarded_stack.rs  hhdm_offset.rs  mod.rs  page_tables.rs  physical_memory.rs  user_vaddr.rs  vaddr_allocator.rs
kernel/core/src/syscall_handlers/: disk.rs  event.rs  graphics.rs  ioport.rs  ipc.rs  memory.rs  misc.rs  mod.rs  pci.rs  service.rs  task.rs
kernel/core/src/task/: context.rs  global_scheduler.rs  local_scheduler.rs  mod.rs  task.rs
kernel/core/src/task/policy/: ipc_aware.rs  mod.rs  priority.rs  round_robin.rs
kernel/core/src/time/: lapic_timer.rs  mod.rs  pit.rs  rtc.rs  sleep_queue.rs  tsc.rs
kernel/src/: acpi.rs  apic.rs  consts.rs  gdt.rs  interrupt.rs  ioapic.rs  lib.rs  limine_requests.rs  logger.rs  main.rs  nmi_handler_state.rs  raw_syscall_handler.rs  syscall_handlers.rs  user_land.rs  user_task_from_elf.rs
kernel/src/drivers/: keyboard.rs
kernel/src/graphics/: display.rs  frame_buffer_embedded_graphics.rs  frame_buffer_info.rs  mod.rs  rgb_pixel.rs  writer.rs
kernel/src/interrupt/: handlers.rs  idt.rs  mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: cpu_local_data.rs  global_allocator.rs  guarded_stack.rs  hhdm_offset.rs  mod.rs  page_tables.rs  physical_memory.rs  user_vaddr.rs  vaddr_allocator.rs  virtual_memory_allocator.rs
kernel/src/syscall_handlers/: ipc.rs  task.rs
kernel/src/task/: context.rs  global_scheduler.rs  local_scheduler.rs  mod.rs  process.rs  task.rs
kernel/src/time/: lapic.rs  lapic_timer.rs  mod.rs  pit.rs  rtc.rs  tsc.rs
kernel/tests/: Cargo.toml  basic_boot.rs  build.rs
kernel/tests/src/: basic_boot.rs  keyboard.rs  lib.rs  panic_handler.rs  stack_tests.rs  user_mode.rs
kernel/tests/src/display/: mod.rs  owner.rs
kernel/tests/src/elf/: mod.rs
kernel/tests/src/graphics/: mod.rs
kernel/tests/src/interrupts/: mod.rs  timer.rs
kernel/tests/src/ipc/: mod.rs
kernel/tests/src/keyboard/: mod.rs
kernel/tests/src/memory/: mmap.rs  mod.rs  physical.rs  vaddr.rs
kernel/tests/src/scheduler/: context_switch.rs  mod.rs  spawn.rs  stack.rs
kernel/tests/src/syscalls/: mod.rs
kernel/tests/src/time/: mod.rs
kernel/tests/src/user_mode/: mod.rs
kernel_api_types/src/: graphics.rs  lib.rs  window.rs
runner/: Cargo.toml  build.rs  limine.conf  main.rs
runner/src/: main.rs
shared/kernel_api_types/: Cargo.toml
shared/kernel_api_types/src/: fs.rs  graphics.rs  lib.rs  net.rs  window.rs
tests/: Cargo.toml  build.rs
tests/src/: basic_boot.rs  context_switch.rs  display_owner.rs  get_module.rs  interrupts.rs  lib.rs  memory.rs  physical_memory.rs  scheduler.rs  spawn.rs  time.rs  timer_interrupt.rs  user_mode.rs  vaddr_allocator.rs
tools/bench_py/: __main__.py  cli.py  config.py  patching.py  plotting.py  results.py  runner.py  stats.py
tools/bench_runner/: Cargo.toml  build.rs
tools/bench_runner/src/: main.rs
tools/image_test/: Cargo.toml
tools/image_test/src/: main.rs
tools/runner/: Cargo.toml  bos_ds.conf  build.rs  launcher.conf  limine.conf  net.conf
tools/runner/src/: main.rs
tools/tls_test/: Cargo.toml
tools/tls_test/src/: main.rs
ulib/: Cargo.toml
ulib/src/: display.rs  lib.rs  window.rs
user_land/: Cargo.toml  build.rs
user_land/src/: display.rs  main.rs  syscalls.rs
userspace/apps/boser/: Cargo.toml
userspace/apps/boser/src/: main.rs
userspace/apps/files/: Cargo.toml  build.rs
userspace/apps/hello_egui/: Cargo.toml
userspace/apps/launcher/: Cargo.toml  build.rs
userspace/apps/launcher/src/: config.rs  main.rs
userspace/apps/user_land/: Cargo.toml
userspace/apps/utest/: Cargo.toml
userspace/bench/bench_init/: Cargo.toml
userspace/bench/ctx_switch_bench/: Cargo.toml
userspace/bench/ipc_bench/: Cargo.toml
userspace/bench/mem_bench/: Cargo.toml
userspace/bos_egui/: Cargo.toml
userspace/display_server/: Cargo.toml  build.rs
userspace/frameworks/bos_egui/: Cargo.toml
userspace/frameworks/bos_egui/src/: lib.rs
userspace/frameworks/bos_egui/src/bos/: mod.rs  pixel_draw.rs  stub_egui.rs
userspace/frameworks/bos_std/: Cargo.toml
userspace/frameworks/bos_std/src/: lib.rs  net.rs
userspace/fs_server/: Cargo.toml
userspace/fs_server/src/: main.rs  server.rs
userspace/hello_egui/: Cargo.toml  build.rs
userspace/init_task/: Cargo.toml
userspace/libs/http_client/: Cargo.toml
userspace/libs/http_client/src/: lib.rs  tls.rs  url.rs
userspace/mouse_reader/: Cargo.toml
userspace/servers/display_server/: Cargo.toml  build.rs
userspace/servers/display_server/src/: compositor_config.rs  lib.rs  main.rs  window.rs
userspace/servers/display_server/src/compositor/: drag.rs  event_loop.rs  focus.rs  handlers.rs  layout.rs  mod.rs  render.rs
userspace/servers/net_server/: Cargo.toml
userspace/servers/net_server/src/: config.rs  device.rs  main.rs
userspace/ulib/: Cargo.toml
userspace/user_land/: Cargo.toml
userspace/utest/: Cargo.toml
(+60 files in other folders)
