[workspace]
resolver = "3"
members = ["kernel/*", "userspace/*/*", "tools/*"]
exclude = ["tools/bench_py"]
default-members = ["tools/runner"]

[profile.dev]
panic = "abort"

# Optimize all dependencies (especially crypto) even in dev builds.
# Without this, software P256/AES/SHA operations are unusably slow.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"

