[package]
name = "runner"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
user_land = {path = "../user_land", artifact = "bin", target = "x86_64-unknown-none"}

[[bin]]
name = "runner"
path = "main.rs"
test = false
bench = false