[package]
name = "runner"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
tests = { path = "../tests", artifact = "bin", target = "x86_64-unknown-none" }
user_land = {path = "../user_land", artifact = "bin", target = "x86_64-unknown-none"}

[features]
kernel_test = []

[[bin]]
name = "runner"
path = "src/main.rs"
test = false
bench = false