[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x86_64 = "0.15.4"
log = "0.4.29"
kernel = {path = "../kernel"}

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bin]]
name = "tests"
path = "src/basic_boot.rs"
test = false
bench = false
