[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x86_64 = "0.15.4"
log = "0.4.29"
heapless = "0.9.2"
ez_paging = { git = "https://github.com/ChocolateLoverRaj/ez_paging", version = "0.1.0", default-features = false }
embedded-graphics = "0.8.1"
kernel = {path = "../kernel"}
kernel_api_types = {path = "../kernel_api_types"}
nodit = {version = "0.10.0", default-features = false}

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bin]]
name = "tests"
path = "src/basic_boot.rs"
test = false
bench = false
