[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x86_64 = "0.15.4"
log = "0.4.29"
heapless = "0.9.2"
embedded-graphics = "0.8.1"
kernel = {path = "../core"}
kernel_api_types = {path = "../../shared/kernel_api_types"}
nodit = {version = "0.10.0", default-features = false}

[build-dependencies]
kernel = { path = "../core", artifact = "bin", target = "x86_64-unknown-none" }


[[bin]]
name = "tests"
path = "src/basic_boot.rs"
test = false
bench = false
