[package]
name = "runner"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
kernel = { path = "../../kernel/core", artifact = "bin", target = "x86_64-unknown-none" }
tests = { path = "../../kernel/tests", artifact = "bin", target = "x86_64-unknown-none" }
init_task = {path = "../../userspace/servers/init_task", artifact = "bin", target = "x86_64-unknown-none"}
display_server = {path = "../../userspace/servers/display_server", artifact = "bin", target = "x86_64-unknown-none"}
fs_server = {path = "../../userspace/servers/fs_server", artifact = "bin", target = "x86_64-unknown-none"}
user_land = {path = "../../userspace/apps/user_land", artifact = "bin", target = "x86_64-unknown-none"}
hello_egui = {path = "../../userspace/apps/hello_egui", artifact = "bin", target = "x86_64-unknown-none"}
files = {path = "../../userspace/apps/files", artifact = "bin", target = "x86_64-unknown-none"}
launcher = {path = "../../userspace/apps/launcher", artifact = "bin", target = "x86_64-unknown-none"}
boser    = {path = "../../userspace/apps/boser",   artifact = "bin", target = "x86_64-unknown-none"}
e1000      = {path = "../../userspace/drivers/e1000",       artifact = "bin", target = "x86_64-unknown-none"}
net_server = {path = "../../userspace/servers/net_server", artifact = "bin", target = "x86_64-unknown-none"}
utest = { path = "../../userspace/apps/utest", artifact = "bin", target = "x86_64-unknown-none", optional = true }
fatfs = "0.3"

[features]
kernel_test = []
userspace_test = ["dep:utest"]
test_mem       = ["kernel_test"]
test_time      = ["kernel_test"]
test_interrupts = ["kernel_test"]
test_graphics  = ["kernel_test"]
test_usermode  = ["kernel_test"]
test_keyboard  = ["kernel_test"]
test_ipc       = ["kernel_test"]
test_display   = ["kernel_test"]
test_scheduler = ["kernel_test"]
test_elf      = ["kernel_test"]
test_sched         = ["kernel_test"]
test_sched_noelf   = ["kernel_test"]

[[bin]]
name = "runner"
path = "src/main.rs"
test = false
bench = false