[package]
name = "launcher"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "launcher"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ulib                  = { path = "../../frameworks/ulib" }
kernel_api_types      = { path = "../../../../kernel-api" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
