[package]
name = "bos_egui"
version = "0.1.0"
edition = "2024"
publish = false

# On Linux: use real egui + eframe for GPU-rendered native windows.
[target.'cfg(target_os = "linux")'.dependencies]
egui  = { version = "0.29", default-features = false, features = ["default_fonts"] }
eframe = "0.29"

# On Bos (x86_64-unknown-none, no OS): software-rendered stub.
# Real egui deps are not no_std-compatible, so we provide a compatible stub.
[target.'cfg(not(target_os = "linux"))'.dependencies]
ulib                  = { path = "../ulib" }
kernel_api_types      = { path = "../../../shared/kernel_api_types" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
embedded-graphics     = "0.8.1"
