[package]
name = "bos_std"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
embedded-io = "0.7"

# On Linux: use real std networking.
[target.'cfg(target_os = "linux")'.dependencies]

# On Bos (x86_64-unknown-none): IPC-based networking via ulib + net_server.
[target.'cfg(not(target_os = "linux"))'.dependencies]
ulib             = { path = "../ulib" }
kernel_api_types = { path = "../../../shared/kernel_api_types" }
