[package]
name = "display_server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ulib = { path = "../../frameworks/ulib" }
kernel_api_types = { path = "../../../shared/kernel_api_types" }
embedded-graphics = "0.8.1"

[[bin]]
name = "display_server"
test = false
bench = false

[lib]
name = "display_server_lib"
path = "src/lib.rs"
