[package]
name = "net_server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "net_server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ulib                  = { path = "../../frameworks/ulib" }
kernel_api_types      = { path = "../../../shared/kernel_api_types" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
] }
